--- a/clock.html
+++ b/clock.html
@@ -4,8 +4,10 @@
 Clock
 </title>
 <body>
+<div width = "400" style="text-align:center">
 <canvas id="clock" width = "400" height="400"></canvas>
-<div align="center" id="date"></div>
+<div id="date" width = "400"></div>
+</div>
 <script src="clock.js"></script>
 </body>
 </html>
