--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <html>
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>
 Clock
 </title>
 <body>
+<div onmouseout="invisibleSettings()" style="position:absolute">
+	<div onmouseover="visibleSettings()">
+	⚙
+		<div id="settings" style="display:none">
+			<input type="checkbox" id="border" onclick="clickSettings()" checked> Border <br>
+			<input type="checkbox" id="hours" onclick="clickSettings()" checked> Hour Ticks <br>
+			<input type="checkbox" id="minutes" onclick="clickSettings()" checked> Minute Ticks <br>
+			<input type="checkbox" id="seconds" onclick="clickSettings()" checked> Seconds <br>
+			<input type="checkbox" id="date" onclick="clickSettings()" checked> Show Date <br>
+		</div>
+	</div>
+</div>
 <div width = "400" style="text-align:center">
 <canvas id="clock" width = "400" height="400"></canvas>
-<div id="date" width = "400"></div>
+<div id="datetext" width = "400"></div>
 </div>
 <script src="clock.js"></script>
 </body>
