--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Clock
 			<input type="checkbox" id="minutes" onclick="clickSettings()" checked> Minute Ticks <br>
 			<input type="checkbox" id="seconds" onclick="clickSettings()" checked> Seconds <br>
 			<input type="checkbox" id="date" onclick="clickSettings()" checked> Show Date <br>
+			<input type="checkbox" id="smooth" onclick="clickSettings()"> Smooth Mode <br>
 		</div>
 	</div>
 </div>
