--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>
 Clock
 </title>
-<body>
+<body id="body">
 <div onmouseout="invisibleSettings()" style="position:absolute">
 	<div onmouseover="visibleSettings()">
 	⚙
@@ -15,6 +15,7 @@ Clock
 			<input type="checkbox" id="date" onclick="clickSettings()" checked> Show Date <br>
 			<input type="checkbox" id="murica" onclick="clickSettings()" checked> American Date <br>
 			<input type="checkbox" id="smooth" onclick="clickSettings()"> Smooth Mode <br>
+			<input type="checkbox" id="dark" onclick="clickSettings()"> Dark Mode <br>
 		</div>
 	</div>
 </div>
